--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "langchain": "^0.0.148",
+    "memory-cache": "^0.2.0",
+    "object-hash": "^3.0.0",
     "openai": "^4.6.0"
   }
 }
