--- a/app.yaml
+++ b/app.yaml
@@ -15,4 +15,8 @@
 runtime: nodejs18
 includes:
   - env_variables.yaml
+env_variables:
+  SEARCH_ENDPOINT: "SEARCH_ENDPOINT_PLACEHOLDER"
+  COMPLETION_ENDPOINT: "COMPLETION_ENDPOINT_PLACEHOLDER"
+
 # [END app_yaml]
