--- a/.github/workflows/build-bff.yaml
+++ b/.github/workflows/build-bff.yaml
@@ -23,8 +23,8 @@ jobs:
 
       - name: Prepare app.yaml
         run: |
-          sed -i "s/SEARCH_ENDPOINT_PLACEHOLDER/${{ secrets.SEARCH_ENDPOINT }}/g" app.yaml
-          sed -i "s/COMPLETION_ENDPOINT_PLACEHOLDER/${{ secrets.COMPLETION_ENDPOINT }}/g" app.yaml
+          sed -i "s|SEARCH_ENDPOINT_PLACEHOLDER|${{ secrets.SEARCH_ENDPOINT }}|g" app.yaml
+          sed -i "s|COMPLETION_ENDPOINT_PLACEHOLDER|${{ secrets.COMPLETION_ENDPOINT }}|g" app.yaml
 
       - name: Deploy to Google App Engine
         run: gcloud app deploy app.yaml --project your-project-id
