--- a/.github/workflows/build-bff.yaml
+++ b/.github/workflows/build-bff.yaml
@@ -27,4 +27,4 @@ jobs:
           sed -i "s|COMPLETION_ENDPOINT_PLACEHOLDER|${{ secrets.COMPLETION_ENDPOINT }}|g" app.yaml
 
       - name: Deploy to Google App Engine
-        run: gcloud app deploy app.yaml --project your-project-id
+        run: gcloud app deploy app.yaml --project silent-relic-393813
