--- a/.github/workflows/deploy-bff.yaml
+++ b/.github/workflows/deploy-bff.yaml
@@ -1,9 +1,10 @@
 name: Deploy to Google App Engine
 
-on: [
-  push,
-  workflow_dispatch
-]
+on:
+  push:
+    branches:
+      - main
+  workflow_dispatch:
 
 jobs:
   deploy:
