--- a/app.yaml
+++ b/app.yaml
@@ -16,5 +16,6 @@ runtime: nodejs18
 env_variables:
   SEARCH_ENDPOINT: "SEARCH_ENDPOINT_PLACEHOLDER"
   COMPLETION_ENDPOINT: "COMPLETION_ENDPOINT_PLACEHOLDER"
+  EMBEDDING_ENDPOINT: "EMBEDDING_ENDPOINT_PLACEHOLDER"
 
 # [END app_yaml]
