Updated GitHub Actions workflow

--- a/app.yaml
+++ b/app.yaml
@@ -17,5 +17,6 @@ env_variables:
   COMPLETION_ENDPOINT: "COMPLETION_ENDPOINT_PLACEHOLDER"
   EMBEDDING_ENDPOINT: "EMBEDDING_ENDPOINT_PLACEHOLDER"
   SEARCH_ENDPOINT: "SEARCH_ENDPOINT_PLACEHOLDER"
+  FUNCTIONS_KEY: "FUNCTIONS_KEY_PLACEHOLDER"
 
 # [END app_yaml]
